--- a/Drafts/Elasticity-Master.tex
+++ b/Drafts/Elasticity-Master.tex
@@ -50,7 +50,7 @@
 
 \vfill \noindent \textsc{Abstract} \hrulefill
 
-\vspace{.05in} \noindent I estimate the elasticity of GDP with respect to aggregate capital and labor using industry-specific cost structures and without assuming an aggregate production function exists. Different assumptions about industry capital costs provide upper and lower bounds for the elasticities. In the U.S. from 1948-1995 the capital elasticity bounds were 0.18-0.33, and rose to 0.21-0.39 in 1995-2018. Excluding housing and government or de-capitalizing intellectual property lowers the capital elasticity bounds. Elasticities are similar in other OECD countries from 2005-2015. Based on these boundaries for the capital elasticity, common estimates of total factor productivity growth represent a lower bound. 
+\vspace{.05in} \noindent It is often assumed that the elasticity of GDP with respect to capital is one-third, but this depends on assumptions of zero markups and an aggregate production function. I estimate the elasticity allowing markups to vary by industry and with a rich input-output structure. Assumptions about industry capital costs provide bounds on the elasticity. In the U.S. from 1948-1995 the capital elasticity was 0.18-0.33 and rose to 0.21-0.39 in 1995-2018. Similar bounds hold across the OECD 2005-2015. Excluding housing or de-capitalizing intellectual property lowers those bounds. Based on this, common estimates of total factor productivity growth represent a lower bound. 
 
 \vspace{.1in} \hrule
 
@@ -64,40 +64,40 @@
 \pagebreak 
 
 \section{Introduction}
-\onehalfspacing One of the most common assumptions made within economics is that ``alpha equals one-third'', referring to the capital elasticity $\alpha$ in a Cobb-Douglas aggregate production function $Y = K^{\alpha}L^{1-\alpha}$. This rule of thumb is derived from an observation that labor's share of GDP is around two-thirds, implying $1-\alpha \approx 2/3$, and hence that $\alpha \approx 1/3$. Not only has a recent literature (reviewed below) documented that labor's share of GDP has fallen in the last few decades, but as \cite{hall1988,hall1990} noted this rule of thumb only works if one assumes there are zero economic profits and hence labor's GDP share is equal to it's elasticity. Moreover, the rule of thumb relies on the existence of an aggregate production function and commonly assumes that $\alpha$ is constant over time.
+\onehalfspacing One of the most common assumptions made within economics is that ``alpha equals one-third'', referring to the capital elasticity $\alpha$ in a Cobb-Douglas aggregate production function $Y = K^{\alpha}L^{1-\alpha}$. This rule of thumb is derived from an observation that labor's share of GDP is around two-thirds, implying $1-\alpha \approx 2/3$, and hence that $\alpha \approx 1/3$. Not only has a recent literature (reviewed below) documented that labor's share of GDP has fallen in the last few decades, but as \cite{hall1988,hall1990} notes this rule of thumb only works if one assumes there are zero economic profits and labor's GDP share is equal to it's elasticity. The rule of thumb relies on the existence of an aggregate production function and commonly assumes that $\alpha$ is constant over time.
 
-In recent work \cite{bfshortnote,bfprodge} show that one can calculate a meaningful elasticity of GDP with respect to capital, $d \ln Y/ d \ln K$, without having to rely on any of the assumptions embedded in the rule of thumb. In particular, their theory shows how to calculate the aggregate elasticity from disaggregated units (e.g. industries) with rich input/output relationships and arbitrary unit-level distortions (e.g. markups). There is no need to assume an aggregate production function exists, that profits are zero, or that the elasticity remains constant over time. Their structure requires only market-clearing and cost-minimization.
+In recent work \cite{bfshortnote,bfprodge} show that one can calculate a meaningful elasticity of GDP with respect to aggregate capital, $d \ln Y/ d \ln K$, without having to rely on any of the assumptions embedded in the rule of thumb. In particular, their theory shows how to calculate the aggregate elasticity from disaggregated units (e.g. industries) with rich input/output relationships and arbitrary unit-level distortions (e.g. markups). There is no need to assume an aggregate production function exists, that profits are zero, or that the elasticity remains constant over time. Their structure requires only market-clearing and cost-minimization. The same structure provides an elasticity with respect to labor, $d \ln Y/ d \ln L$.
 
-In this paper I apply their theory to calculate the annual elasticity of GDP with respect to capital and labor using disaggregated data on industries and their input-output relationships, allowing for arbitrary markups at the industry level. I do this for the United States over the period 1948-2018, and make a comparison across a set of 20 OECD countries for the period 2005-2015. 
+In this paper I apply the Baqaee and Farhi theory to calculate the annual elasticity of GDP with respect to capital and labor using disaggregated data on industries and input-output relationships, allowing for arbitrary markups at the industry level. I do this for the United States over the period 1948-2018, and make a comparison across a set of 20 OECD countries for the period 2005-2015. 
 
-The theory in \cite{bfshortnote,bfprodge} does not eliminate the well-known problem of separating capital costs from economic profits in national accounts data. Because of this, what I present here are plausible bounds on the capital and labor elasticities based on different assumptions regarding capital costs. An upper bound for the capital elasticity is established by assuming zero economic profits in all industries, such that all value-added not used for labor compensation is paid to capital, as in the rule of thumb. This represents one extreme of the capital elasticity, and true values are likely lower. A lower bound for the capital elasticity is found by assuming capital costs are equal to depreciation, as industries pay at least this amount in capital costs.\footnote{There are measurement issues with labor costs as well, in particular with the treatment of proprietors income \citep{Gollin:2002zr,gommerupert2004,elsbyhs2013}. In practice the treatment of proprietors income generates little variation in the estimated elasticities.} Bounds for the labor elasticity are simply one minus the capital elasticity, so the no-profit assumption represents a lower bound, and the depreciation assumption an upper bound, for the labor elasticity. 
+The theory in \cite{bfshortnote,bfprodge} does not eliminate the well-known problem of separating capital costs from economic profits in national accounts data. Because of this, what I present here are plausible bounds on the capital and labor elasticities based on different assumptions regarding capital costs. An upper bound for the capital elasticity is established by assuming zero economic profits in all industries, such that all value-added not used for labor compensation is paid to capital, as in the rule of thumb. This represents one extreme of the capital elasticity, and true values are likely lower. A lower bound for the capital elasticity is found by assuming capital costs are equal to depreciation, as industries pay at least this amount in capital costs.\footnote{There are measurement issues with labor costs as well, in particular with the treatment of proprietors income \citep{Gollin:2002zr,gommerupert2004,elsbyhs2013}. In practice the treatment of proprietors income generates little variation in the estimated elasticities.} Bounds for the labor elasticity are one minus the capital elasticity, so the no-profit assumption represents a lower bound, and the depreciation assumption an upper bound, for the labor elasticity. 
 
 My baseline bounds for the capital elasticity in the U.S. can be seen in Figure \ref{FIG_cap_comparison}. Between 1948 and 1995, the elasticity of GDP with respect to capital was in a range of 0.18-0.33, with 1/3 forming an upper bound except for the 1970s. After 1995 the range shifted up, and from 1995-2018 the elasticity with respect to capital was 0.21-0.39. The bounds for the labor elasticity are the mirror image of these.
 
 Because of the issues with measuring capital costs I cannot give a precise estimate of the capital elasticity or labor elasticity. To the extent that there are markups present in the economy, the actual capital elasticity must lie below the upper bound (and hence the labor elasticity above its lower bound). Given recent evidence that markups were above one throughout the period 1948-2018 \citep{Barkai000,edmondetal2018,NBERw23687,RePEc:nbr:nberwo:22897,basu2019} this implies that the capital elasticity was \textit{below} one-third from 1948-1995. After 1995, it becomes less clear. Higher markups in that period imply the capital elasticity was below the upper bound, but at the same time the upper bound on the capital elasticity rose. A value of one-third for the capital elasticity after 1995 is plausible, but in no way certain.
 
-In addition to the bounding estimates, I explore two alternative ways of imputing the capital costs that go into the elasticity calculations. The first alternative is based on a user cost formula \citep{halljorg1967} as in \cite{Barkai000} and \cite{rognlie2015}. The elasticity estimates based on user costs of capital fluctuate from 1948-2018 and show an upward drift, but for the most part lie within the bounds. There are exceptions that imply periods of widespread negative economic profits.\footnote{User cost based estimates of the capital elasticity in 1975-1989 often lie above the upper bound, implying negative economic profits. This is driven by assumptions made regarding expected inflation in the user cost formula. I discuss this in Section 4 when covering the results in more detail.} As a second alternative, I use investment spending by industries to estimate their capital costs. The capital elasticity based on these costs shows a smaller upward trend, and stays everywhere within the bounds. On average, the capital elasticity in this case is around 0.27 after 1960, after beginning close to 0.21 in 1948. 
+In addition to the bounding estimates, I explore two alternative ways of imputing the capital costs that go into the elasticity calculations. The first alternative is a user cost formula \citep{halljorg1967} as in \cite{Barkai000} and \cite{rognlie2015}. The elasticity estimates based on user costs of capital fluctuate from 1948-2018 and show an upward drift, but for the most part lie within the bounds. There are exceptions that imply periods of widespread negative economic profits.\footnote{User cost based estimates of the capital elasticity in 1975-1989 often lie above the upper bound, implying negative economic profits. This is driven by assumptions made regarding expected inflation in the user cost formula. I discuss this in Section 4 when covering the results in more detail.} As a second alternative, I use investment spending by industries to estimate their capital costs. The capital elasticity based on these costs shows a smaller upward trend, and stays everywhere within the bounds. On average, the capital elasticity in this case is around 0.27 after 1960, after beginning close to 0.21 in 1948. 
 
-The bounds and alternative estimates of the capital elasticity all show an upward trend to some extent. I use an \cite{op1996} decomposition of the elasticity estimates to investigate the source of this. On average, the capital elasticity across all industries drove the aggregate trend, and changes in the composition of GDP by industry did not. There is evidence that larger industries tend to have higher capital elasticities, but that relationship did not strengthen or weaken over time.
+The bounds and alternative estimates of the capital elasticity all show an upward trend to some extent. I use an \cite{op1996} decomposition of the elasticity estimates to investigate the source of this. On average, a higher capital elasticity across all industries drove the aggregate trend, and changes in the composition of GDP by industry did not. There is evidence that larger industries tend to have higher capital elasticities, but that relationship did not strengthen or weaken over time.
 
-Beyond these baseline results, the bounds on the elasticities depend on the scope of economic activity included. In particular, if I narrow my focus to the private business sector (excluding government and owner-occupied housing) then the estimated capital elasticity is lower than in the baseline. The capital elasticity in the private business sector is 0.09-0.28 from 1948-1995, and 0.16-0.33 from 1995-2018, meaning it is always below one-third. 
+Beyond these baseline results, the bounds on the elasticities depend on the scope of economic activity included. In particular, if I narrow my focus to the private business sector (excluding government and owner-occupied housing) then the estimated capital elasticity is lower than in the baseline. The capital elasticity in the private business sector is 0.09-0.28 from 1948-1995, and 0.16-0.33 from 1995-2018, always below one-third. 
 
 In a different exercise, I de-capitalize intellectual property (IP) from the national accounts data as in \cite{ksz2020}. This shifts down the estimates of the capital elasticity as well. From 1948-1995 the capital elasticity is in the range 0.14-0.32, and 0.17-0.35 from 1995-2018. The adjustment is not as dramatic as with the private business sector, but capitalization of IP does appear to account for several points of the overall increase in the capital elasticity over time. 
 
 The last main result of the paper is the comparison across 20 OECD countries from 2005-2015. Here I find that the bounds in all countries overlap to a large extent. The level of the capital elasticity across OECD countries is slightly higher (and the labor elasticity slightly lower) than in my U.S. baseline, but this is is partly due to a different treatment of proprietors income in the OECD due to data limitations. Assessing the U.S. under the same terms as the OECD, the overlap in elasticities is strong. 
 
-This paper is a complement to the growing literature on the distribution of GDP across factors.\footnote{\cite{azmat2012,bentolilaSP2003,estrada2014,harrison2005,jt2007,guscina2006,kn2014,daoetal2017} all document a decline in labor's share of GDP in the last few decades, across countries and industries. This was contemporaneous with a decline in capital's share of GDP \citep{Barkai000,rognlie2015}. Incorporating the lessons in \cite{Gollin:2002zr} regarding proprietors income does not appear to change that conclusion \citep{gommerupert2004,elsbyhs2013}. The decline in labor's share has be tied to a fall in the price of new capital \citep{kn2014}, but more recent research suggests it may be an artifact of capitalizing intellectual property \citep{ksz2020} or the reporting of income \citep{RePEc:oup:qjecon:v:134:y:2019:i:4:p:1675-1745.}.} It shares with that literature the same measurement issues surrounding proprietors income and capital costs. Recent work on ``factorless income'' by \cite{kn2019} is perhaps the closest methodological analogue to this paper, in that those authors explore a range of plausible approaches for dealing with this factorless income, although at an aggregate level. The bounds I find for the elasticities are calculated either assuming that all factorless income is attributed to capital (the zero profit bound) or that it all factorless income represents economic profits (the depreciation cost bound).\footnote{Factorless income as a share of value-added is larger in the industry-level data than in the aggregate because I do not have information on some rental costs that are reported at the aggregate level.} 
+This paper is a complement to the growing literature on the distribution of GDP across factors.\footnote{\cite{azmat2012,bentolilaSP2003,estrada2014,harrison2005,jt2007,guscina2006,kn2014,daoetal2017} all document a decline in labor's share of GDP in the last few decades, across countries and industries. This was contemporaneous with a decline in capital's share of GDP \citep{Barkai000,rognlie2015}. Incorporating the lessons in \cite{Gollin:2002zr} regarding proprietors income does not appear to change that conclusion \citep{gommerupert2004,elsbyhs2013}. The decline in labor's share has been tied to a fall in the price of new capital \citep{kn2014}, but more recent research suggests it may be an artifact of capitalizing intellectual property \citep{ksz2020} or the reporting of income \citep{RePEc:oup:qjecon:v:134:y:2019:i:4:p:1675-1745.}.} It shares with that literature the same measurement issues surrounding proprietors income and capital costs. Recent work on ``factorless income'' by \cite{kn2019} is perhaps the closest methodological analogue to this paper, in that those authors explore a range of plausible approaches for dealing with this factorless income at an aggregate level. The bounds I find for the elasticities are calculated either assuming that all factorless income is attributed to capital (the zero profit bound) or that it all factorless income represents economic profits (the depreciation cost bound).\footnote{Factorless income as a share of value-added is larger in the industry-level data than in the aggregate because I do not have information on some rental costs that are reported at the aggregate level.} 
 
 Despite the similarities in approach with the literature on factor shares of GDP, my findings are distinct. Elasticities and factor shares are not identical due both to market power and the input-output structure of the economy \citep{bfshortnote,bfprodge}. For this reason a factor's share of GDP does not necessarily inform us about the elasticity of GDP with respect to that factor.
 
 One of the uses of the elasticities I estimate is as an input into other macroeconomic studies. Any research that is interested in how the supply of factors of production (e.g. savings/consumption decisions, labor force participation, demographic change, international finance) will affect the economy can use these elasticities without having to specify an entire production structure that incorporates market power or rich input-output relationships. As \cite{bfshortnote,bfprodge} show, these elasticities already embed those features. As I can only provide reasonable bounds for the elasticities, this provides a range of values that factor supply models could use to evaluate their results. One caution is that the elasticities are first-order approximations, and so any dramatic changes in factor supplies would have to account for second-order effects \citep{bfmicro}. 
 
-As different application is to growth accounting, which depends on elasticity estimates as part of the calculation of growth in total factor productivity (TFP). Typical accounting exercises by the Bureau of Labor Statistics, as well as extensions to incorporate utilization rates \citep{kfb2006,fernald2014}, use the factor share of labor to find the labor elasticity and one minus that share to find the capital elasticity, which is equivalent to the no-profits bound on the elasticities. Based on my results, that overstates the capital elasticity and understates the labor elasticity. In the last section of this paper I use the bounds on the elasticities to create bounds for the growth of TFP in the U.S. from 1948-2018. The typical no-profit assumption represents a \textit{lower} bound for the growth rate of TFP, which averages about 1.3\% per year 1948-2018. The growth rate of TFP may have been up to 1.6\% per year, depending on the choice of assumption used to find the capital and labor elasticities. The level of TFP in 2018 may be up to 20\% higher than what the typical calculation finds. 
+As different application is to growth accounting, which depends on elasticity estimates to calculate growth in total factor productivity (TFP). Typical accounting exercises by the Bureau of Labor Statistics, as well as extensions to incorporate utilization rates \citep{kfb2006,fernald2014}, use the factor share of labor to find the labor elasticity and one minus that share to find the capital elasticity, which is equivalent to the no-profits bound on the elasticities. Based on my results, that overstates the capital elasticity and understates the labor elasticity. In the last section of this paper I use the bounds on the elasticities to create bounds for the growth of TFP in the U.S. from 1948-2018. The typical no-profit assumption represents a \textit{lower} bound for the growth rate of TFP, which averages about 1.3\% per year 1948-2018. The growth rate of TFP may have been up to 1.6\% per year, depending on the choice of assumption used to find the capital and labor elasticities. The level of TFP in 2018 may be up to 20\% higher than what the typical calculation finds. 
 
 The paper proceeds as follows. Section 2 presents the theoretical framework of \cite{bfshortnote,bfprodge} I use to calculate the elasticities, and Section 3 discusses the data sources and major measurement issues. In Section 4 I present the baseline results on the bounds for the elasticities, as well as the alternatives based on investment and user cost assumptions. Section 5 evaluates trends in the elasticity estimates and their relationship to aggregate ratios of costs to GDP. In Section 6 I explore how the elasticities change depending on the scope of economic activity. Section 7 compares elasticities across the OECD, and Section 8 performs the growth accounting exercises. Section 9 concludes.
 
 \section{Theoretical background}
-What I present in this section is a simplified version of \cite{bfshortnote,bfprodge} to highlight only the theory that I use. Full proofs and deeper explanations can be found in their papers. In the interest of space I use the abbreviation ``BF'' to refer to those authors in this section.
+What I present in this section is a simplified version of \cite{bfshortnote,bfprodge} to highlight only the parts of their theory that I use. Full proofs and deeper explanations can be found in their papers. In the interest of space I use the abbreviation ``BF'' to refer to those authors in this section.
 
 The economy consists of $J$ industries, and each industry uses intermediate inputs from other industries (and possibly itself), as well as the factors of production capital ($K$) and labor ($L$). There can be any arbitrary number of factors of production, and I use capital and labor here only for simplicity. BF's theory is also ``nestable'' in that each industry could have an arbitrary number of sub-industries or firms inside of it. I am speaking of industries here solely because this is the level of detail I have available in the data. 
 
@@ -214,7 +214,7 @@ The aggregate effect of an increase in capital or labor depends on the individua
 This breakdown of the elasticities will be useful later in decomposing the change in the elasticities over time. Overall, the BF structure makes it possible to calculate the elasticity of aggregate output with respect to aggregate capital or labor without an  aggregate production function, with rich input/output structures, and with arbitrary markups at the industry level.
 
 \section{National accounts data}
-The calculation of $\epsilon_{Kt}$ and $\epsilon_{Lt}$ is straightforward in theory, but not in practice. The well-known issue is the disconnect between what is reported in the national accounts (e.g. gross operating surplus) and what is necessary for the calculation (e.g. the cost of capital). This disconnect is why in the following section I will build bounds for estimates of $\epsilon_{Kt}$ (and $\epsilon_{Lt}$) based on different ways of reconciling the national accounts with the needs of the calculation. 
+The calculation of $\epsilon_{Kt}$ and $\epsilon_{Lt}$ from equation (\ref{EQ_E}) is straightforward in theory, but not in practice. The well-known issue is the disconnect between what is reported in the national accounts (e.g. gross operating surplus) and what is necessary for the calculation (e.g. the cost of capital). This disconnect is why in the following section I will build bounds for estimates of $\epsilon_{Kt}$ (and $\epsilon_{Lt}$) based on different ways of reconciling the national accounts with the needs of the calculation. 
 
 Prior to those main results I explain the three main U.S. data sources, set notation regarding the national accounts, and explain the process I used to merge together various sources to create industry-level data that spans 1948-2018 for the United States.
 
@@ -436,7 +436,7 @@ This story is repeated with the depreciation cost lower bound. Again the mean in
 Up to this point I have been working with data that covers all industries, including those for which value-added and capital costs may be particularly hard to measure correctly (e.g. government, owner-occupied housing). The baseline also takes as given the capitalization of intellectual property in the national accounts, which is a recent adjustment that impacts value-added and capital stocks within industries.
 
 \subsection{Private business sector}
-To see the influence of the inclusion of government (both general government and government enterprises at federal and state/local levels) and owner-occupied housing on the aggregate elasticities, I remove them both from the calculation of $\epsilon_{Kt}$ and $\epsilon_{Lt}$. In practice, this means deleting their rows and columns from the IO matrix $\Lambda$ as well as their entries from the vector of value-added shares in $\Gamma$.\footnote{In practice there are several industries that are deleted, depending on the year. NAICS includes entries for federal general government (defense), federal general government (non-defense), federal government enterprises, state and local general government, and state and local government enterprises. Prior to 1997, the federal general government categories are combined into a single industry. With respect to housing, both housing and other real estate are excluded. Prior to 1997, those two industries were aggregated into a single real estate industry.} This makes the coverage of the calculation equivalent to the ``Private business sector'' coverage that the BLS uses. 
+To see the influence of the inclusion of government (both general government and government enterprises at federal and state/local levels) and owner-occupied housing on the aggregate elasticities, I remove them both from the calculation of $\epsilon_{Kt}$ and $\epsilon_{Lt}$. In practice, this means deleting their rows and columns from the IO matrix $\Lambda$ as well as their entries from the vector of value-added shares in $\Gamma$.\footnote{In practice there are several industries that are deleted, depending on the year. NAICS includes entries for federal general government (defense), federal general government (non-defense), federal government enterprises, state and local general government, and state and local government enterprises. Prior to 1997, the federal general government categories are combined into a single industry. With respect to housing, both housing and other real estate are excluded. Prior to 1997, those two industries were aggregated into a single real estate industry.} This makes the coverage of the calculation equivalent to the ``Private business sector'' coverage that the BLS uses.\footnote{One could also examine the ``Non-farm private business sector'' by eliminating the industries for farming and forestry, fishing, and other agricultural activities. In practice eliminating those industries does not change the elasticity by an appreciable amount compared to the ``Private business sector''.} 
 
 Figure \ref{FIG_excl_gov_housing} plots the estimated value of the capital elasticity bounds (the no-profit and depreciation cost assumptions) for the private business sector as dark black lines, and the plausible range for the capital elasticity is shaded in dark gray. For comparison, the original bounds using all industries are plotted using the dashed lines, and that range is shaded in light gray. 
 
